--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Personal Page</title>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
 
     </head>
     <body>
         <div>
-            <h1>My Personal Page</h1>
-            <ul>
-                <li>Name: Bastián Cepeda</li>
-                <li>Major: Civil Engineering in Computer Science</li>
-                <li>Year of University Enrollment: 2022</li>
-                <li>Github: <a href="">github.com/bcepeda</a></li>
-            </ul>
-            <h2>Resumen personal</h2>
+            <h1 id="tittle">My Personal Page</h1>
+                <div class="header-container">
+                    <div class="info">
+                        <p><strong>Name:</strong> Bastián Cepeda</p>
+                        <p><strong> Major:</strong> Civil Engineering in Computer Science</p>
+                        <p><strong> Year of University Enrollment: </strong> 2022</p>
+                        <p><strong>Github:</strong> <a href="https://github.com/bastianc00">github.com/bastianc00</a></p>
+                    </div>
+                    <img src="me_face.jpg" alt="Mi imagen">
+                </div>
+                <h2>About me</h2>
+            
             
             <p>
                 I am a fourth year student of Civil Engineering in Computer Science at Universidad de los Andes. I have experience in programming languages such as Python and SQL and I am currently learning Ruby and creating web pages.
