--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <p><strong> Year of University Enrollment: </strong> 2022</p>
                         <p><strong>Github:</strong> <a href="https://github.com/bastianc00">github.com/bastianc00</a></p>
                     </div>
-                    <img src="me_face.jpg" alt="Mi imagen">
+                    <img src="me.jpg" alt="Mi imagen">
                 </div>
                 <h2>About me</h2>
             
