--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
                 <p><strong>Year of University Enrollment:</strong> 2022</p>
                 <p><strong>Github:</strong> <a href="https://github.com/bastianc00">github.com/bastianc00</a></p>
             </div>
-            <img src="me.jpg" alt="Mi imagen" class="profile-img">
+            <img src="images/me.jpg" alt="Mi imagen" class="profile-img">
         </div>
 
         <h2>About me</h2>
         <p>
             I am a fourth year student of Civil Engineering in Computer Science at Universidad de los Andes. I have experience in programming languages such as Python and SQL and I am currently learning Ruby and creating web pages.
         </p>
+        <h2>Hobbies</h2>
         <p>
             I am also passionate about sports like Basketball, MTB and Crossfit. My favorite player is Stephen Curry, because he is the best player in the NBA.
         </p>
+        <img src="images/nba_player.jpg" alt="Mi imagen" class="profile-img">
+        <h2>Skills</h2>
         <table>
             <tr>
                 <th>Skill</th>
