Add style button

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </table>
         <h2>Text entry section</h2>
         <input type="text" id="text-input">
-        <button>Submit</button>
+        <button id="button">Submit</button>
         <div class="text-section">
             
         </div>
