--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             </tr>
         </table>
 
-        <h2>Contact</h2>
-        <p>If you want to contact me, I suggest you write to me on any of my platforms.</p>
+        <h2 class="contact">Contact</h2>
+        <p class="contact">If you want to contact me, I suggest you write to me on any of my platforms.</p>
         <div class="contact-images">
-            <a href="mailto:bcepeda@miuandes.cl.com">
+            <a href="mailto:bcepeda@miuandes.cl">
                 <img src="images/email.png" alt="Email" class="contact-icon">
             </a>
             <a href="https://github.com/bastianc00">
@@ -74,12 +74,12 @@
             </a>
         </div>
 
-        <input type="text" id="text-input" placeholder="Enter some text">
-        <button id="button">Submit</button>
-
-        <div class="text-section">
-            <p id="display-text"></p>
-
+        <div class="center-container">
+            <input type="text" id="text-input" placeholder="Enter some text">
+            <button id="button">Submit</button>
+            <div class="text-section">
+                <p id="display-text"></p>
+            </div>
         </div>
         <script>
             document.getElementById('button').addEventListener('click', () => 
